# kubeswitch

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  common.go  completion.go  del.go  go.mod  go.sum  list.go  main.go  merge.go  ns.go  set.go  use.go
.github/workflows/: release.yml
config/: default.toml  ns_alias.toml  starship.toml
scripts/: comp-bash.sh  comp-zsh.zsh  wrap.sh
src/: config.rs  context.rs  kube.rs  main.rs
