[package]
name = "kubeswitch"
version = "0.1.0"
edition = "2021"

[dependencies.clap]
version = "4.4.18"
features = ["derive"]

[dependencies.serde]
version = "1.0.196"
features = ["derive"]

[dependencies.tokio]
version = "1.35.1"
features = ["full"]

[dependencies]
anyhow = "1.0.79"
regex = "1.10.3"
shellexpand = "3.1.0"
toml = "0.8.9"

[build-dependencies.vergen]
version = "8.3.1"
features = ["build", "rustc"]

[build-dependencies]
simple-error = "0.3.0"
