[package]
name = "kubeswitch"
version = "0.2.0"
edition = "2021"
build = "build.rs"
license = "MIT"
authors = ["fioncat"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/fioncat/kubeswitch"
description = "🐱 Switch between kubernetes configs and namespaces"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
regex = "1.10.3"
rev_lines = "0.3.0"
scanf = "1.2.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
shellexpand = "3.1.0"
toml = "0.8.11"

[build-dependencies]
simple-error = "0.3.0"
vergen = { version = "8.3.1", features = ["build", "rustc"] }

[profile.release]
lto = true
strip = true
incremental = false
